...
                    SizedBox(height: 30),

                    Row(
                      children: [
                        SizedBox(width: 40),
                        Expanded(
                          key: Key('ChooseAction'),
                          child: CustomButton(
                            btnText: "Choose Actions",
                            btnPressed: () {
                              print(widget.reportListing.listingID);
                              Navigator.push(
                                  context,
...
                                              listing: widget.listing)));
                            }, //show popup dialog
                          ),
                        ),
                        SizedBox(width: 20),
                        Expanded(
                          key: Key('DismissReport'),
                          child: dismissReport(context,
                              widget.reportListing, widget.listing),
                        ),
                        SizedBox(width: 40),
                      ],
                    ),
...
