...
                  children: [
                    Icon(Icons.search),
                    Expanded(
                      child: Align(
                        alignment: Alignment.centerLeft,
                        child: TextFormField(
                          key: Key('SearchReport'),
                          controller: _searchController,
                          decoration: InputDecoration(
                              hintText: 'Search',
                              border: InputBorder.none,
                              enabledBorder: InputBorder.none,
                              focusedBorder: InputBorder.none),
...
