...
                  children: [
                    Icon(Icons.search),
                    Expanded(
                      child: Align(
                        alignment: Alignment.centerLeft,
                        child: TextFormField(
                          key: Key('SearchCompleted'),
                          controller: _searchController,
                          decoration: InputDecoration(
                              hintText: 'Search',
                              border: InputBorder.none,
                              enabledBorder: InputBorder.none,
                              focusedBorder: InputBorder.none),
...

Widget reportCard(BuildContext context, ReportListing report) {
  return Container(
    child: Padding(
        padding: EdgeInsets.symmetric(vertical: 5, horizontal: 10),
        child: Card(
            key: Key('CompletedListing'),
            margin: EdgeInsets.fromLTRB(5, 2, 2, 5),
            child: GestureDetector(
                child: ListTile(
                  contentPadding:
                  EdgeInsets.symmetric(vertical: 10, horizontal: 20),
                  title: Text(report.reportTitle),
...
